# grawji

./: .codecov.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  flake.nix  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  new-body-report.yml
.github/workflows/: gui_smoke.yml  release.yml  test.yml  type_check.yml
data/: io.github.p5k369.grawji.desktop  io.github.p5k369.grawji.metainfo.xml
docs/: feature-matrix.md  usb-capture.md
flatpak/: io.github.p5k369.grawji.yaml
scripts/: check_version.py  verify_offsets.py
src/grawji/: __init__.py  __main__.py  app.py  backup_recipe.py  batch_export.py  camera_backup.py  camera_info.py  capabilities.py  compatibility.py  core.py  dialogs.py  exif.py  export.py  filmstrip.py  foldertree.py  fp_xml.py  logsetup.py  navigator.py  navigator_geometry.py  preferences.py  presets.py  preview.py  preview_view.py  raf.py  recipe.py  recipe_manager.py  recipe_panel.py  recipes.py  settings.py  widgets.py  window.py
src/grawji/ui/: .gitkeep  batch_export.ui  grawji.cmb  grawji.ui  preferences.ui  preview_view.ui  recipe_manager.ui  recipe_panel.ui
src/grawji/views/: __init__.py  app.py  batch_export.py  export.py  filmstrip.py  foldertree.py  imagemeta.py  navigator.py  preferences.py  preview_view.py  recipe_manager.py  recipe_panel.py  widgets.py  window.py
tests/: conftest.py  gui_support.py  test_backup_recipe.py  test_camera_backup.py  test_camera_info.py  test_capabilities.py  test_compatibility.py  test_core_adapter.py  test_exif.py  test_fp_xml.py  test_navigator.py  test_presets.py  test_preview.py  test_raf.py  test_rawji_pin.py  test_recipe.py  test_recipe_manager_camera.py  test_recipes.py  test_settings.py  test_views_smoke.py
