[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grawji"
version = "0.1.0"
description = "GTK4 frontend for rawji - interactive Fuji RAF conversion via the camera engine."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{ name = "Patrick Zwerschke" }]
dependencies = [
  "PyGObject",
  "rawji",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-github-actions-annotate-failures",
  "pre-commit",
  # IDE type stubs for PyGObject (Gtk/Adw/GExiv2/...). Improves editor code
  # insight; not used by mypy here (the system gi shadows the stub package).
  "pygobject-stubs",
]

[project.scripts]
grawji = "grawji.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grawji"]
exclude = ["**/*.cmb", "**/*.cmb.bak"]

[tool.ruff]
line-length = 79
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["ui"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "S",   # flake8-bandit (security)
  "C4",  # flake8-comprehensions
  "Q",   # flake8-quotes
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "I",   # isort
  "N",   # pep8-naming
  "W",   # warning
  "PL",  # Pylint
  "PGH", # pygrep-hooks
  "FLY", # flynt
  "PERF",# Perflint
  "RUF", # Ruff-specific rules
]

ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"scripts/**" = ["D103", "T201"]
"src/grawji/{app,batch_export,filmstrip,foldertree,navigator,preferences,recipe_manager,widgets,window}.py" = ["E402"]
"tests/**" = ["D100", "D101", "D102", "D103", "D104", "D107", "PLR2004", "S", "ARG", "ANN", "E501", "F401", "PLC0415"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-branches = 14
max-args = 6

[tool.ruff.lint.isort]
known-first-party = ["grawji", "tests"]

[tool.mypy]
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_decorated = false
disallow_any_explicit = false
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["rawji.*", "usb.*"]
ignore_missing_imports = true

# pygobject-stubs is installed for editor type hints, but grawji treats the
# GTK layer as untyped. Skip the gi stubs in mypy so it does not type-check
# the dynamic GObject API.
[[tool.mypy.overrides]]
module = ["gi", "gi.*"]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true

[[tool.mypy.overrides]]
module = [
  "grawji.app",
  "grawji.window",
  "grawji.batch_export",
  "grawji.filmstrip",
  "grawji.foldertree",
  "grawji.widgets",
  "grawji.preferences",
  "grawji.recipe_manager",
  "grawji.__main__",
]
disallow_subclassing_any = false
warn_return_any = false
# @Gtk.Template / @Gtk.Template.Callback are untyped (gi) decorators.
disable_error_code = ["untyped-decorator", "misc"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_return_any = false
disable_error_code = [
  "arg-type",
  "attr-defined",
  "assignment",
  "union-attr",
  "var-annotated",
  "no-untyped-def",
]

[tool.coverage.run]
source = ["grawji"]
branch = true
omit = [
  "**/__init__.py",
  "**/__main__.py",
  "src/grawji/app.py",
  "src/grawji/window.py",
  "src/grawji/filmstrip.py",
  "src/grawji/foldertree.py",
  "src/grawji/preferences.py",
  "src/grawji/ui/**",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == \"__main__\":",
  "\\.\\.\\.",
]
